--- a/Examples/src/Examples/Pages/CreateExtensiblePage.html
+++ b/Examples/src/Examples/Pages/CreateExtensiblePage.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>
-      Simple Page
+      Extensible Page
     </title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,5 +46,5 @@
     <script src="include/js/main.js"></script>
   </body>
   
-</html>
+</html> <!-- html1 -->
 
